--- a/connect/src/main/res/values/strings.xml
+++ b/connect/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">connect</string>
     <string name="login">Login com FlipConnect</string>
+    <string name="pay_with_flipconnect">Pagar com FlipConnect</string>
 </resources>
